--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+        </ul>
+    </nav>
     <h1>Hello World</h1>
+    <div class="puma-icon"></div>
+
 
     <script src="./dist/build.js"></script>
 </body>
